// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardImageHeader Component matches CardImageHeader 1`] = `
.c0 {
  width: 100%;
  border-top-left-radius: calc(0.25rem - 1px);
  border-top-right-radius: calc(0.25rem - 1px);
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<img
  alt=""
  class="sc-fznZeY c0"
/>
`;

exports[`CardImageHeader Component matches CardImageHeader noRadius 1`] = `
.c0 {
  width: 100%;
  border-radius: 0;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<img
  class="sc-fznZeY c0"
/>
`;
